Fourth day tasks completed

--- a/NET.A.2019.Mikhailouski.01/Sorting/Sorting.csproj
+++ b/NET.A.2019.Mikhailouski.01/Sorting/Sorting.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
-    <SignAssembly>true</SignAssembly>
+    <SignAssembly>false</SignAssembly>
     <AssemblyOriginatorKeyFile>Key.pfx</AssemblyOriginatorKeyFile>
   </PropertyGroup>
 
