--- a/NET.A.2019.Mikhailouski.08/SecondTask/AccountService/AccountService.csproj
+++ b/NET.A.2019.Mikhailouski.08/SecondTask/AccountService/AccountService.csproj
@@ -5,8 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\BookStorage\BookStorage.csproj" />
-    <ProjectReference Include="..\ParameterForSearching\ParameterForSearching.csproj" />
+    <ProjectReference Include="..\AccountStorage\AccountStorage.csproj" />
+    <ProjectReference Include="..\Interfaces\Interfaces.csproj" />
   </ItemGroup>
 
 </Project>
