--- a/NET.A.2019.Mikhailouski.08/SecondTask/Interfaces/Interfaces.csproj
+++ b/NET.A.2019.Mikhailouski.08/SecondTask/Interfaces/Interfaces.csproj
@@ -5,8 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\BookStorage\BookStorage.csproj" />
-    <ProjectReference Include="..\ParameterForSearching\ParameterForSearching.csproj" />
+    <ProjectReference Include="..\Account\Account.csproj" />
   </ItemGroup>
 
 </Project>
