22nd task completed

--- a/NET.A.2019.Mikhailouski.22/DAL/DAL.csproj
+++ b/NET.A.2019.Mikhailouski.22/DAL/DAL.csproj
@@ -6,9 +6,19 @@
 
   <ItemGroup>
     <Folder Include="Repositories\" />
+    <Folder Include="Contexts\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DAL.Interface\DAL.Interface.csproj" />
     <ProjectReference Include="..\BLL.Interface\BLL.Interface.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="2.2.6">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+    <PackageReference Include="MySql.Data.EntityFrameworkCore" Version="8.0.17" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.2.6" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.2.6" />
   </ItemGroup>
 </Project>
